# MatLib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
MatLib/: matrix.hpp
cpp/: CMakeLists.txt
cpp/MatLib/: matrix.hpp
cpp/test/: CMakeLists.txt  unitTest.cpp
python/: CMakeLists.txt
python/MatLib/: pyMatrix.cpp  pyMatrix.hpp  setup.py
python/test/: CMakeLists.txt  unitTest.py
test/: CMakeLists.txt  unitTest.cpp
